<resources>
    <string name="app_name">WearApp</string>
    <string name="forr"><u>Forgot password</u></string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="I_Agree">I agree to the <u> Terms</u>  and <u> Conditions</u> </string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="already">Already Registered ? <b><u>Login Now</u> </b>!</string>
    <string name="log_into_your_account">Log Into your Account</string>
    <string name="get_started">Get Started</string>
    <string name="just_a_few_details_to_get_started">Just A Few Details to Get Started</string>
    <string name="action_settings">Settings</string>
    <string name="acti"><u>Q and A: Ask integretor</u></string>
    <string name="actirt"><u>previous Yesterdays\'recodes</u></string>
    <string name="actid"><u> Discussion: integrator@Talk</u></string>
    <string name="actis"><u>Real-Time: IRC Support</u></string>
    <string name="jkkjk">Get Help from Others</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="next">Next</string>


</resources>
