<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wearapp.Register">

<ScrollView
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="150dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:background="@drawable/white_rectangle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/get_started"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/just_a_few_details_to_get_started"
            android:textColor="#000"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
           />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            app:passwordToggleEnabled="true">

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/rounded_white"
                android:drawableLeft="@mipmap/user"
                android:drawablePadding="5dp"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            app:passwordToggleEnabled="true">
            <AutoCompleteTextView
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/rounded_white"
                android:drawableLeft="@mipmap/email"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:layout_marginBottom="10dp"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            app:passwordToggleEnabled="true">
            <AutoCompleteTextView
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/rounded_white"
                android:drawableLeft="@mipmap/key"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/password2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            app:passwordToggleEnabled="true">
            <AutoCompleteTextView
                android:id="@+id/userRetypePassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/confirm"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/retype"
                android:textSize="14sp"
                android:background="@drawable/rounded_white"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"/>
        </android.support.design.widget.TextInputLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">
    <CheckBox
        android:id="@+id/chkIos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:textSize="11sp"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:textSize="11sp"
        android:text="@string/I_Agree"
        />
</LinearLayout>

        <Button
            android:id="@+id/btReg"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:text="@string/register"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/register_button"/>
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/already"
            android:textColor="#000"
            android:textStyle="normal"
            android:textSize="14sp" />

    </LinearLayout>

</ScrollView>
</RelativeLayout>
