<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wearapp.Login">

    <ScrollView
        android:id="@+id/scrollview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/white_rectangle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/log_into_your_account"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                app:passwordToggleEnabled="true">
                <AutoCompleteTextView
                    android:id="@+id/userEmailLog"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/email"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/rounded_white"
                    android:drawableLeft="@mipmap/user"
                    android:textSize="14sp"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="5dp"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:layout_marginBottom="10dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                app:passwordToggleEnabled="true">
                <AutoCompleteTextView
                    android:id="@+id/userPasswordLog"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/password"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/rounded_white"
                    android:drawableLeft="@mipmap/key"
                    android:textSize="14sp"
                    android:drawablePadding="5dp"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:inputType="textPassword"
                    android:layout_marginBottom="10dp"/>

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btLog"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:text="@string/log_in"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/register_button"/>
            <TextView

                android:id="@+id/tv_reset_password"
                android:textColor="@color/white"
                android:text="@string/forr"
                android:layout_width="wrap_content"
                android:paddingLeft="5dp"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/regtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create Account"
                android:textColor="@color/white"
                android:paddingLeft="5dp"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>

